--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -65,21 +66,165 @@
             <div class="sec1-contact animate__animated animate__backInUp animate__delay-2s"><a href="">Contact Us</a>
             </div>
             <div class="sec1-social animate__animated animate__backInUp animate__delay-2s">
-                <a href=""><i class="fab fa-facebook-f animate__animated animate__backInUp animate__delay-2s"></i></a>
-                <a href=""><i class="fab fa-instagram animate__animated animate__backInUp animate__delay-2s"></i></a>
-                <a href=""><i class="fab fa-twitter animate__animated animate__backInUp animate__delay-2s"></i></a>
-                <a href=""><i class="far fa-envelope animate__animated animate__backInUp animate__delay-2s"></i></a>
+                <a href="https://www.facebook.com/Liteagle" target="_blank"><i
+                        class="fab fa-facebook-f animate__animated animate__backInUp animate__delay-2s"></i></a>
+                <a href="https://www.instagram.com/official_liteagle/" target="_blank"><i
+                        class="fab fa-instagram animate__animated animate__backInUp animate__delay-2s"></i></a>
+                <a href="https://twitter.com/Liteagle_office" target="_blank"><i
+                        class="fab fa-twitter animate__animated animate__backInUp animate__delay-2s"></i></a>
+                <a href="mailto:info@liteagle.com" target="_blank"><i
+                        class="far fa-envelope animate__animated animate__backInUp animate__delay-2s"></i></a>
             </div>
         </div>
     </div>
 
     <!------------------------------- sec2 ---------------------------- -->
     <div class="sec2">
+        <div class="sec2-inner">
+            <div class="sec2-left" data-aos="fade-up">
+                <img src="img/about-us/1.jpg" class="sec2-img1" alt="">
+                <img src="img/about-us/2.jpg" class="sec2-img2" alt="">
+            </div>
+            <div class="sec2-right" data-aos="fade-up">
+                <h1>About Us</h1>
+                <p>We specialize in services for intellectual property rights, patents, trademarks, copyrights and many
+                    more fields through our highly trained professional. We, Liteagle LLP, situated at Safdarjung
+                    Enclave, Delhi, are a one stop shop offering a wide array of legal services. We work professionally
+                    and ethically with a result oriented approach. We are strongly dedicated to our work and our
+                    services are remarkable. Our charges are very affordable.</p>
+                <a href="">Read More -></a>
+            </div>
+        </div>
+    </div>
+
+    <!------------------------------- sec3 ---------------------------- -->
+    <div class="sec3">
+        <div class="sec3-left" data-aos="fade-up">
+            <h1>Having 7+ Years of Experience in Legal Sevice</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            <h2><i class="fas fa-check-square"></i>Expert Legal Services</h2>
+            <h2><i class="fas fa-check-square"></i>Expert Attorneys</h2>
+            <h2><i class="fas fa-check-square"></i>No need extra cost for consultation</h2>
+            <h2><i class="fas fa-check-square"></i>Highly Recommended</h2>
+            <h2><i class="fas fa-check-square"></i>100% Success Rate</h2>
+        </div>
+        <div class="sec3-right" data-aos="fade-up">
+            <div class="sec3-box sec3-box1">
+                <div class="sec3-box-top">
+                    <i class="far fa-thumbs-up"></i>
+                    <h5>100% Success Rate Guaranteed</h5>
+                </div>
+                <div class="sec3-box-bottom">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.
+                </div>
+            </div>
+
+            <div class="sec3-box sec3-box2">
+                <div class="sec3-box-top">
+                    <i class="far fa-thumbs-up"></i>
+                    <h5>Highly Recommended</h5>
+                </div>
+                <div class="sec3-box-bottom">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.
+                </div>
+            </div>
+
+            <div class="sec3-box sec3-box3">
+                <div class="sec3-box-top">
+                    <i class="far fa-thumbs-up"></i>
+                    <h5>Expert Legal Services</h5>
+                </div>
+                <div class="sec3-box-bottom">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.
+                </div>
+            </div>
+
+            <div class="sec3-box sec3-box4">
+                <div class="sec3-box-top">
+                    <i class="far fa-thumbs-up"></i>
+                    <h5>Ensure Quality Support</h5>
+                </div>
+                <div class="sec3-box-bottom">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!------------------------------- sec4 ---------------------------- -->
+    <div class="sec4" data-aos="fade-up">
+        <h1>Our Services</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam delectus rem quisquam voluptatum ullam
+            reiciendis nemo accusamus facilis vero, sit et quo explicabo perspiciatis eos! Blanditiis sapiente tenetur
+            minus architecto?</p>
+        <div class="sec4-bottom">
+            <div class="sec4-box sec4-box1">
+                <h1>Notary Service</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p>
+            </div>
+            <div class="sec4-box sec4-box2">
+                <h1>Affidavit Service</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p>
+            </div>
+            <div class="sec4-box sec4-box3">
+                <h1>Attestion</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p>
+            </div>
+        </div>
+
+
+        <h2>Why us</h2>
+        <div class="sec4-down">
+            <div class="sec4-boxx sec4-boxx1">
+                <i class="fas fa-trophy"></i>
+                <p>We work professionally and ethically with a result oriented approach.
+                </p>
+            </div>
+            <div class="sec4-boxx sec4-boxx2">
+                <i class="fas fa-award"></i>
+                <p>We are strongly dedicated to our work and our services are remarkable.</p>
+            </div>
+            <div class="sec4-boxx sec4-boxx3">
+                <i class="fas fa-hand-holding-usd"></i>
+                <p>We avail prompt and responsible responses at affordable charges.</p>
+            </div>
+        </div>
+
+
+        <a href="">Read More -></a>
+    </div>
+
+    <!------------------------------- sec5 ---------------------------- -->
+    <div class="sec5">
+
+    </div>
+
+    <!------------------------------- sec6 ---------------------------- -->
+    <div class="sec6">
 
     </div>
 
 
     <!------------------------------ JS ---------------------------------->
+    <script src="js/app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        $(function () {
+            AOS.init();
+        });
+    </script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript">
         var nav = document.querySelector('nav');
