--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 </head>
 
 <body>
     <!-------------------------------- Navbar  -------------------------------->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-2">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="./img/logo/logo.png" alt="">
+            <a class="navbar-brand" href="index.html"><img src="./img/logo/logo.png" alt="">
                 LITEAGLE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,19 +34,19 @@
                 <div class="mx-auto"></div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about-us.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="our-services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Team</a>
+                        <a class="nav-link" href="our-team.html">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="contact-us.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -63,7 +65,8 @@
                 Vitae quisquam molestiae delectus quasi sunt
                 amet magnam veritatis fuga asperiores eligendi? Quis iste, error eum autem cupiditate iure omnis ab rem.
             </h3>
-            <div class="sec1-contact animate__animated animate__backInUp animate__delay-2s"><a href="">Contact Us</a>
+            <div class="sec1-contact animate__animated animate__backInUp animate__delay-2s"><a
+                    href="contact-us.html">Contact Us</a>
             </div>
             <div class="sec1-social animate__animated animate__backInUp animate__delay-2s">
                 <a href="https://www.facebook.com/Liteagle" target="_blank"><i
@@ -87,12 +90,12 @@
             </div>
             <div class="sec2-right" data-aos="fade-up">
                 <h1>About Us</h1>
-                <p>We specialize in services for intellectual property rights, patents, trademarks, copyrights and many
+                <p>We specialize in services for labour laws, employment laws, corporate laws and many
                     more fields through our highly trained professional. We, Liteagle LLP, situated at Safdarjung
                     Enclave, Delhi, are a one stop shop offering a wide array of legal services. We work professionally
                     and ethically with a result oriented approach. We are strongly dedicated to our work and our
                     services are remarkable. Our charges are very affordable.</p>
-                <a href="">Read More -></a>
+                <a href="about-us.html">Read More -></a>
             </div>
         </div>
     </div>
@@ -106,9 +109,7 @@
                 ex ea commodo consequat.</p>
             <h2><i class="fas fa-check-square"></i>Expert Legal Services</h2>
             <h2><i class="fas fa-check-square"></i>Expert Attorneys</h2>
-            <h2><i class="fas fa-check-square"></i>No need extra cost for consultation</h2>
             <h2><i class="fas fa-check-square"></i>Highly Recommended</h2>
-            <h2><i class="fas fa-check-square"></i>100% Success Rate</h2>
         </div>
         <div class="sec3-right" data-aos="fade-up">
             <div class="sec3-box sec3-box1">
@@ -165,19 +166,37 @@
             minus architecto?</p>
         <div class="sec4-bottom">
             <div class="sec4-box sec4-box1">
-                <h1>Notary Service</h1>
+                <h1>Corporate Law</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
                     deleniti officia quasi.</p>
             </div>
             <div class="sec4-box sec4-box2">
-                <h1>Affidavit Service</h1>
+                <h1>commercial Law</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
                     deleniti officia quasi.</p>
             </div>
             <div class="sec4-box sec4-box3">
-                <h1>Attestion</h1>
+                <h1>Contarcts</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p>
+            </div>
+            <div class="sec4-box sec4-box3">
+                <h1>Employment Law</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p>
+            </div>
+            <div class="sec4-box sec4-box2">
+                <h1>Industrial Relations</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p>
+            </div>
+            <div class="sec4-box sec4-box1">
+                <h1>Disputes Resolution</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
                     deleniti officia quasi.</p>
@@ -203,23 +222,203 @@
         </div>
 
 
-        <a href="">Read More -></a>
+        <a href="our-services.html">Read More -></a>
     </div>
 
     <!------------------------------- sec5 ---------------------------- -->
-    <div class="sec5">
+    <div class="sec5" data-aos="fade-up">
+
+        <div class="container">
+            <div class="section-title">
+                <h2>Testimonials</h2>
+                <p>See what our clients say about Us !!</p>
+            </div>
+        </div>
+        <div class="testimonials-carousel-wrap">
+            <div class="listing-carousel-button listing-carousel-button-next"><i class="fa fa-caret-right"
+                    style="color: #fff"></i></div>
+            <div class="listing-carousel-button listing-carousel-button-prev"><i class="fa fa-caret-left"
+                    style="color: #fff"></i></div>
+            <div class="testimonials-carousel">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="testi-item">
+                                <div class="testi-avatar"><img src="img/testimonial/user1.jpg"></div>
+                                <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
+                                <div class="testimonials-text">
+                                    <div class="listing-rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem
+                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an
+                                        unknown printer took a galley of type and scrambled it to make a type
+                                        specimen
+                                        book.</p>
+                                    <a href="#" class="text-link"></a>
+                                    <div class="testimonials-avatar">
+                                        <h3>Vaibhav</h3>
+                                        <h4>Owner</h4>
+                                        <h4>XYZ Firm</h4>
+                                    </div>
+                                </div>
+                                <div class="testimonials-text-after"><i class="fa fa-quote-left"></i></div>
+                            </div>
+                        </div>
+
+                        <!--second--->
+                        <div class="swiper-slide">
+                            <div class="testi-item">
+                                <div class="testi-avatar"><img src="img/testimonial/user2.jpg"></div>
+                                <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
+                                <div class="testimonials-text">
+                                    <div class="listing-rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem
+                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an
+                                        unknown printer took a galley of type and scrambled it to make a type
+                                        specimen
+                                        book.</p>
+                                    <a href="#" class="text-link"></a>
+                                    <div class="testimonials-avatar">
+                                        <h3>Shashank</h3>
+                                        <h4>Director</h4>
+                                        <h4>XYZ Firm</h4>
+                                    </div>
+                                </div>
+                                <div class="testimonials-text-after"><i class="fa fa-quote-left"></i></div>
+                            </div>
+                        </div>
+                        <!--third-->
+
+                        <div class="swiper-slide">
+                            <div class="testi-item">
+                                <div class="testi-avatar"><img src="img/testimonial/user3.jpg"></div>
+                                <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
+                                <div class="testimonials-text">
+                                    <div class="listing-rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem
+                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an
+                                        unknown printer took a galley of type and scrambled it to make a type
+                                        specimen
+                                        book.</p>
+                                    <a href="#" class="text-link"></a>
+                                    <div class="testimonials-avatar">
+                                        <h3>Vivek</h3>
+                                        <h4>Developer</h4>
+                                        <h4>XYZ Firm</h4>
+                                    </div>
+                                </div>
+                                <div class="testimonials-text-after"><i class="fa fa-quote-left"></i></div>
+                            </div>
+                        </div>
+
+                        <!--fourth-->
+                        <div class="swiper-slide">
+                            <div class="testi-item">
+                                <div class="testi-avatar"><img src="img/testimonial/4.jfif"></div>
+                                <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
+                                <div class="testimonials-text">
+                                    <div class="listing-rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                        Lorem
+                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                                        an
+                                        unknown printer took a galley of type and scrambled it to make a type
+                                        specimen
+                                        book.</p>
+                                    <a href="#" class="text-link"></a>
+                                    <div class="testimonials-avatar">
+                                        <h3>Ankush</h3>
+                                        <h4>Designer</h4>
+                                        <h4>XYZ Firm</h4>
+                                    </div>
+                                </div>
+                                <div class="testimonials-text-after"><i class="fa fa-quote-left"></i></div>
+                            </div>
+                        </div>
+                        <!--testi end-->
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="tc-pagination"></div>
+        </div>
+        <footer>
+            <div class="footer-inner">
+                <div class="footer-box">
+                    <img src="./img/logo/1.jpeg" alt="">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias ratione laudantium, tempora omnis
+                        veniam dicta quia quidem dolorum illo</p>
+                </div>
+                <div class="footer-box">
+                    <h2>Quick Links</h2>
+                    <a href="about-us.html">About Us</a>
+                    <a href="our-services.html">Services</a>
+                    <a href="our-team.html">Our Team</a>
+                    <a href="contact-us.html">Contact Us</a>
+                </div>
+                <div class="footer-box">
+                    <h2>Reach Us</h2>
+                    <a href="" class="footer-link">Liteagle LLP, B2/88, Safdarjung Enclave, New Delhi-110029.</a>
+                    <a href="tel:+91-7503576834" class="footer-link">M No. +91-7503576834</a>
+                    <a href="mailto:info@liteagle.com" class="footer-link">E-mail id- info@liteagle.com</a>
+                    <div class="sec1-social">
+                        <a href="https://www.facebook.com/Liteagle" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/official_liteagle/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="https://twitter.com/Liteagle_office" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="mailto:info@liteagle.com" target="_blank"><i class="far fa-envelope"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="down">
+                © 2021 LITEAGLE. All Rights Reserved.
+            </div>
+        </footer>
+
 
     </div>
+
+
 
     <!------------------------------- sec6 ---------------------------- -->
-    <div class="sec6">
-
-    </div>
 
 
     <!------------------------------ JS ---------------------------------->
     <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
     <script>
         $(function () {
             AOS.init();
