--- a/contact-us.html
+++ b/contact-us.html
@@ -55,8 +55,67 @@
 
     <!------------------------------- SEC1  ---------------------------->
     <div class="cu-sec1">
-        fdegdfgdfgfddff
+        <div class="abt-sec1-left">
+            <h1>Contact Us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ut aperiam? Eligendi, atque earum.
+                Mollitia fugit veniam, at dolorem nulla temporibus dolor accusamus assumenda magni minus modi iste
+                beatae commodi?</p>
+        </div>
+        <div class="abt-sec1-right">
+            <img src="./img/contact-us/david-veksler-HpmDAS1Dozs-unsplash.jpg" alt="">
+        </div>
     </div>
+
+    <div class="cu-sec2">
+        <div class="contact-form">
+            <div class="first-container">
+                <div class="info-container">
+                    <div>
+                        <h3>Address</h3>
+                        <p>Liteagle LLP, B2/88, Safdarjung Enclave, New Delhi-110029</p>
+                    </div>
+                    <div>
+                        <h3>Lets Talk</h3>
+                        <p>M No. +91-7503576834, Landline-011-46011334</p>
+                    </div>
+                    <div>
+                        <h3>General Support</h3>
+                        <p>Shashank@liteagle.com, info@liteagle.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="second-container">
+                <h2>Send Us A Message</h2>
+                <form>
+                    <div class="form-group">
+                        <label for="name-input">Tell us your name*</label>
+                        <input id="name-input" type="text" placeholder="First name" required="">
+                        <input type="text" placeholder="Last name" required="">
+                    </div>
+                    <div class="form-group">
+                        <label for="email-input">Enter your email</label>
+                        <input id="email-input" type="text" placeholder="Eg. example@gmail.com" required="">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone-input">Enter phone number</label>
+                        <input id="phone-input" type="text" placeholder="Eg. +91-1234567890" required="">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-textarea">Message</label>
+                        <input class="textarea" id="message-textarea" placeholder="Write us a message"></input>
+                    </div>
+                    <a class="btn">Send message</a>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="cu-map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.8877519053694!2d77.18421131494581!3d28.513024696230907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1e1bb7af3711%3A0x5bba1a9e01477cb7!2sQutub%20Minar%20Metro%20Station!5e0!3m2!1sen!2sin!4v1632333024094!5m2!1sen!2sin"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+
 
     <!------------------------------ footer ---------------------------->
     <footer>
