--- a/our-services.html
+++ b/our-services.html
@@ -55,7 +55,15 @@
 
     <!------------------------------- SEC1  ---------------------------->
     <div class="ser-sec1">
-        fdegdfgdfgfddff
+        <div class="abt-sec1-left">
+            <h1>Our Services</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ut aperiam? Eligendi, atque earum.
+                Mollitia fugit veniam, at dolorem nulla temporibus dolor accusamus assumenda magni minus modi iste
+                beatae commodi?</p>
+        </div>
+        <div class="abt-sec1-right">
+            <img src="./img/services/alvaro-serrano-hjwKMkehBco-unsplash.jpg" alt="">
+        </div>
     </div>
 
     <!------------------------------ footer ---------------------------->
