--- a/our-team.html
+++ b/our-team.html
@@ -55,7 +55,15 @@
 
     <!------------------------------- SEC1  ---------------------------->
     <div class="te-sec1">
-        fdegdfgdfgfddff
+        <div class="abt-sec1-left">
+            <h1>Our Team</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ut aperiam? Eligendi, atque earum.
+                Mollitia fugit veniam, at dolorem nulla temporibus dolor accusamus assumenda magni minus modi iste
+                beatae commodi?</p>
+        </div>
+        <div class="abt-sec1-right">
+            <img src="./img/team-page/istockphoto-1201679769-612x612.jpg" alt="">
+        </div>
     </div>
 
     <!------------------------------ footer ---------------------------->
